# a2e_lang

./: .gitignore  LANGUAGE.md  README.md  ROADMAP.md  pyproject.toml
a2e_lang/: __init__.py  ast_nodes.py  cli.py  compiler.py  compiler_spec.py  decompiler.py  engine.py  errors.py  grammar.lark  graph.py  logging.py  lsp.py  orchestrator.py  parser.py  plugins.py  prompts.py  recovery.py  registry.py  resilience.py  scoring.py  simulator.py  sourcemap.py  tokens.py  validator.py  watcher.py  webhook.py  yaml_mode.py
examples/: full_workflow.a2e  simple.a2e  test_workers_ai.py  test_yaml_mode.py
tests/: conftest.py  test_cli.py  test_compiler.py  test_compiler_spec.py  test_complexity.py  test_decompiler.py  test_ecosystem.py  test_graph.py  test_llm.py  test_lsp.py  test_parser.py  test_roundtrip.py  test_runtime.py  test_simulator.py  test_validator.py
vscode-extension/: README.md  language-configuration.json  package.json
vscode-extension/syntaxes/: a2e.tmLanguage.json
